feat - Criação da página de detalhes do pokémon
Description: Criação do arquivo html 'pageDetail' onde receberá todas as informações do pokémon na qual o usuário escolher. Criação da função  redirectPokemonDetailPage onde levará o usuário para a página de detalhes do pokemon e a função 'showPokemonDetail' que irá puxar todas as informações do pokémon que o usuário escolher

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -7,6 +7,15 @@ body {
     background-color: #f6f8fc;
 }
 
+.grid{
+    
+    background-color: whitesmoke;
+    margin: 0 50px 0 50px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
+
+
 .content {
     width: 100vw;
     height: 100vh;
